--- a/Propiedades-de-texto/styles.css
+++ b/Propiedades-de-texto/styles.css
@@ -1,10 +1,16 @@
 h1{
     color: blueviolet;
     font-size: 20 px;
+    font-family: daniel;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
 }
 p{
     color: gray;
-    font-size: 12px;
+    font-size: 16px;
+    font-family: daniel;
+
 }
 li{
     color: gray;
