--- a/Propiedades-de-texto/font.css
+++ b/Propiedades-de-texto/font.css
@@ -5,6 +5,6 @@
 }
 @font-face {
     font-family: "daniel";
-    src: url("fonts/Montserrat-Italic.ttf") format("truetype");
-    font-weight: 300;
+    src: url("fonts/Montserrat-Light") format("truetype");
+    font-weight: 100;
 }
