--- a/Selectores/styles.css
+++ b/Selectores/styles.css
@@ -1,6 +1,47 @@
+div{
+    background-color: rgb(135, 135, 135);
+    width: 100%;
+    height: 1080px;
+}
+
+form{
+
+    width: 90%;
+}
+.box{
+    background-color: blue;
+    width: 100px;
+    height: 150px;
+    margin: 3px;
+}
+
+.formulario{
+background-color: rgb(242, 102, 125);
+padding: 30px;
+width: auto;
+
+}
+.formulario_input{
+
+    padding: 10px;
+    width: 100%;
+    background-color: black;
+    color: white;
+    
+}
+.formulario_submit{
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    background-color: rgb(107, 23, 160);
+    width: 50%;
+    color: white;
+}
+
+
 h1{
     color: blueviolet;
     font-size: 20 px;
+    text-align: center;
 }
 p{
     color: gray;
